<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.scenes.hat.HatActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/welcome_title"
        android:textSize="@dimen/main_header_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/welcome_subtitle"
        android:textSize="@dimen/main_subheader_size" />

    <ImageView
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@drawable/img_hat" />

    <EditText
        android:id="@+id/textWelcomeUsername"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:hint="@string/welcome_name_hint" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnWelcomeSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/main_button_background"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_select_faculty"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtWelcomeSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_selected"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/primary_text_size"
        android:visibility="invisible" />

</LinearLayout>